--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,6 +1,9 @@
 FROM golang:1.20
 WORKDIR /app
-COPY . .
+COPY src ./src
+COPY go.mod go.mod
+COPY go.sum go.sum
+COPY dev.env .env
 RUN go mod download
 RUN go build -o ./bin/auth ./src/cmd/main.go
 EXPOSE 6969
